update pom.xml to run compile against java15 with preview features enabled